--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true"
-    android:background="@android:color/holo_blue_dark">
+    android:background="#FFC107">
 
     <TextView
         android:id="@+id/header_title"
@@ -13,8 +13,9 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:gravity="center_vertical"
         android:text="@string/app_name"
+        android:textColor="#000000"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
-        app:drawableStartCompat="@mipmap/ic_launcher"
+        app:drawableStartCompat="@drawable/unnamed"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -23,6 +24,7 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:text="@string/copyright"
+        android:textColor="#000000"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
         app:layout_constraintEnd_toEndOf="@+id/header_title"
         app:layout_constraintStart_toStartOf="@+id/header_title"
