--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -14,7 +14,8 @@
         android:gravity="center_vertical"
         android:text="@string/app_name"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
-        app:drawableStartCompat="@mipmap/ic_launcher"
+        app:drawableStartCompat="@drawable/logo"
+        android:drawablePadding="10dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -27,6 +28,5 @@
         app:layout_constraintEnd_toEndOf="@+id/header_title"
         app:layout_constraintStart_toStartOf="@+id/header_title"
         app:layout_constraintTop_toBottomOf="@+id/header_title" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
