--- a/app/src/main/res/menu/main_activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/main_activity_navigation_drawer.xml
@@ -6,11 +6,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_camera"
-            android:icon="@android:drawable/ic_menu_agenda"
+            android:icon="@drawable/home"
             android:title="@string/menu_camera" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@android:drawable/ic_menu_camera"
+            android:icon="@drawable/search"
             android:title="@string/menu_gallery"/>
     </group>
 
@@ -19,7 +19,7 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_manage"
-            android:icon="@android:drawable/ic_menu_manage"
+            android:icon="@drawable/exit"
             android:title="@string/menu_tools" />
     </group>
 
