--- a/app/src/main/res/layout/fragment_list_control_financiero.xml
+++ b/app/src/main/res/layout/fragment_list_control_financiero.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:gravity="center"
-            android:text="Digite el nombre del artículo"
+            android:text=""
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
